--- a/docs/modules/ROOT/pages/includes/quarkus-jca.adoc
+++ b/docs/modules/ROOT/pages/includes/quarkus-jca.adoc
@@ -5,56 +5,22 @@ icon:lock[title=Fixed at build time] Configuration property fixed at build time 
 [.configuration-reference.searchable, cols="80,.^10,.^10"]
 |===
 
-h|[[quarkus-jca_quarkus.jca.named-resource-adapters-the-resource-adapters-to-deploy]]link:#quarkus-jca_quarkus.jca.named-resource-adapters-the-resource-adapters-to-deploy[The resource adapters to deploy]
+h|[[quarkus-jca_configuration]]link:#quarkus-jca_configuration[Configuration property]
 
 h|Type
 h|Default
 
-a|icon:lock[title=Fixed at build time] [[quarkus-jca_quarkus.jca.-resource-adapter-name-.get-config-properties-get-config-properties]]`link:#quarkus-jca_quarkus.jca.-resource-adapter-name-.get-config-properties-get-config-properties[quarkus.jca."resource-adapter-name".get-config-properties]`
+a|icon:lock[title=Fixed at build time] [[quarkus-jca_quarkus.jca.-resource-adapter-configs-.config-properties-config-properties]]`link:#quarkus-jca_quarkus.jca.-resource-adapter-configs-.config-properties-config-properties[quarkus.jca."resource-adapter-configs".config-properties]`
 
 [.description]
 --
-The configuration properties for the resource adapter.
-
 ifdef::add-copy-button-to-env-var[]
-Environment variable: env_var_with_copy_button:+++QUARKUS_JCA__RESOURCE_ADAPTER_NAME__GET_CONFIG_PROPERTIES+++[]
+Environment variable: env_var_with_copy_button:+++QUARKUS_JCA__RESOURCE_ADAPTER_CONFIGS__CONFIG_PROPERTIES+++[]
 endif::add-copy-button-to-env-var[]
 ifndef::add-copy-button-to-env-var[]
-Environment variable: `+++QUARKUS_JCA__RESOURCE_ADAPTER_NAME__GET_CONFIG_PROPERTIES+++`
+Environment variable: `+++QUARKUS_JCA__RESOURCE_ADAPTER_CONFIGS__CONFIG_PROPERTIES+++`
 endif::add-copy-button-to-env-var[]
 --|`Map<String,String>` 
 |
-
-
-a|icon:lock[title=Fixed at build time] [[quarkus-jca_quarkus.jca.-resource-adapter-name-.connection-definitions]]`link:#quarkus-jca_quarkus.jca.-resource-adapter-name-.connection-definitions[quarkus.jca."resource-adapter-name".connection-definitions]`
-
-[.description]
---
-The connection definitions.
-
-ifdef::add-copy-button-to-env-var[]
-Environment variable: env_var_with_copy_button:+++QUARKUS_JCA__RESOURCE_ADAPTER_NAME__CONNECTION_DEFINITIONS+++[]
-endif::add-copy-button-to-env-var[]
-ifndef::add-copy-button-to-env-var[]
-Environment variable: `+++QUARKUS_JCA__RESOURCE_ADAPTER_NAME__CONNECTION_DEFINITIONS+++`
-endif::add-copy-button-to-env-var[]
---|list of ConnectionDefinitionConfig 
-|required icon:exclamation-circle[title=Configuration property is required]
-
-
-a|icon:lock[title=Fixed at build time] [[quarkus-jca_quarkus.jca.-resource-adapter-name-.admin-objects]]`link:#quarkus-jca_quarkus.jca.-resource-adapter-name-.admin-objects[quarkus.jca."resource-adapter-name".admin-objects]`
-
-[.description]
---
-The admin objects.
-
-ifdef::add-copy-button-to-env-var[]
-Environment variable: env_var_with_copy_button:+++QUARKUS_JCA__RESOURCE_ADAPTER_NAME__ADMIN_OBJECTS+++[]
-endif::add-copy-button-to-env-var[]
-ifndef::add-copy-button-to-env-var[]
-Environment variable: `+++QUARKUS_JCA__RESOURCE_ADAPTER_NAME__ADMIN_OBJECTS+++`
-endif::add-copy-button-to-env-var[]
---|list of AdminObjectConfig 
-|required icon:exclamation-circle[title=Configuration property is required]
 
 |===
