--- a/docs/modules/ROOT/pages/index.adoc
+++ b/docs/modules/ROOT/pages/index.adoc
@@ -58,12 +58,12 @@ import io.quarkiverse.ironjacamar.ResourceEndpoint.ActivationSpec;
 
 import jakarta.jms.MessageListener;
 
-@ResourceEndpoint(activationSpec = @ActivationSpec(configKey = "myqueue")) <1>
+@ResourceEndpoint(activationSpecConfigKey = "myqueue") <1>
 public class MyResourceEndpoint implements MessageListener {...} <2>
 
 ----
 
-<1> An optional activation spec configuration key. The `configKey` is the key that will be consumed from the configuration (see the `application.properties` example below)
+<1> An optional activation spec configuration key. The `activationSpecConfigKey` is the key that will be consumed from the configuration (see the `application.properties` example below)
 <2> The resource endpoint implementation.
 Because the Artemis ResourceAdapter implementation expects a `jakarta.jms.MessageListener` instance, you must implement this interface.
 
